feat(skyls): complete LSP features and integrate into sky CLI
LSP Features:
- Add diagnostics on save (skylint + skycheck integration)
- Add hover with docstring extraction (via docgen)
- Add go-to-definition for local symbols
- Add document symbols (functions, globals, loads)

Sky CLI Integration:
- Add 'sky ls' command for LSP server in fat binary
- Add skyls to embedded_full.go with sky_full build tag
- Update help text and command descriptions

Test Harness:
- Add txtar-based test harness using testscript
- Add tests for skylint, skyfmt, skycheck, skyquery, skydoc, skyls
- Create internal/cmdtest package for CLI integration tests

Other:
- Add dist-skyls recipe to justfile
- Update HANDOFF-SKYLS.md with current status

--- a/cmd/sky/BUILD.bazel
+++ b/cmd/sky/BUILD.bazel
@@ -47,7 +47,7 @@ go_binary(
 # Full build - all tools embedded
 go_library(
     name = "sky_full_lib",
-    srcs = _COMMON_SRCS + ["embedded_full.go"],
+    srcs = ["embedded_full.go"],
     importpath = "github.com/albertocavalcante/sky/cmd/sky",
     visibility = ["//visibility:private"],
     deps = _COMMON_DEPS + _EMBEDDED_TOOL_DEPS,
