--- a/cmd/skyls/BUILD.bazel
+++ b/cmd/skyls/BUILD.bazel
@@ -1,8 +1,15 @@
-load("@rules_go//go:def.bzl", "go_binary")
+load("@rules_go//go:def.bzl", "go_binary", "go_library")
 
 go_binary(
     name = "skyls",
-    srcs = ["main.go"],
+    embed = [":skyls_lib"],
     visibility = ["//visibility:public"],
+)
+
+go_library(
+    name = "skyls_lib",
+    srcs = ["main.go"],
+    importpath = "github.com/albertocavalcante/sky/cmd/skyls",
+    visibility = ["//visibility:private"],
     deps = ["//internal/cmd/skyls"],
 )
