fix: move gofumpt to formatters section in golangci-lint v2

--- a/.golangci.toml
+++ b/.golangci.toml
@@ -21,8 +21,11 @@ disable = [
   "godot",
   "wsl",
   "nlreturn",
-  "gofumpt",
 ]
+
+[formatters]
+enable = []
+disable = ["gofumpt"]
 
 [linters.settings.errcheck]
 check-type-assertions = false
