feat: implement LSP completion and fix all cmd tests
## LSP Completion (new feature)
- Implement handleCompletion with support for:
  - Starlark keywords (def, if, for, etc.)
  - Builtin functions (print, len, range, etc.)
  - Common modules (json, math, time)
  - Module member completions (json.encode, etc.)
  - Document symbols (functions and variables)
  - Function parameters when cursor is inside a function

## Test Fixes
- skycheck: Add directory walking support for .star files
- skycov: Fix tests to use JSON coverage data format
- skydoc: Remove unsupported HTML format test, fix multi-file test
- skylint: Fix test expectations for exit codes and output
- skyquery: Fix query syntax in tests to match actual API
- skytest: Fix test assertions to use correct builtin names
- plugins: Fix copyFile test for invalid dest dir behavior

All 10 test packages now pass.

--- a/internal/cmd/skycheck/BUILD.bazel
+++ b/internal/cmd/skycheck/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "skycheck",
@@ -7,6 +7,13 @@ go_library(
     visibility = ["//:__subpackages__"],
     deps = [
         "//internal/starlark/checker",
+        "//internal/starlark/filekind",
         "//internal/version",
     ],
+)
+
+go_test(
+    name = "skycheck_test",
+    srcs = ["run_test.go"],
+    embed = [":skycheck"],
 )
