--- a/internal/cmd/skycov/BUILD.bazel
+++ b/internal/cmd/skycov/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "skycov",
@@ -9,4 +9,10 @@ go_library(
         "//internal/starlark/coverage",
         "//internal/version",
     ],
+)
+
+go_test(
+    name = "skycov_test",
+    srcs = ["run_test.go"],
+    embed = [":skycov"],
 )
