--- a/internal/plugins/BUILD.bazel
+++ b/internal/plugins/BUILD.bazel
@@ -27,6 +27,7 @@ go_library(
 go_test(
     name = "plugins_test",
     srcs = [
+        "install_test.go",
         "runner_test.go",
         "store_test.go",
         "workspace_test.go",
