--- a/internal/cmd/skyfmt/BUILD.bazel
+++ b/internal/cmd/skyfmt/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "skyfmt",
@@ -10,4 +10,10 @@ go_library(
         "//internal/starlark/formatter",
         "//internal/version",
     ],
+)
+
+go_test(
+    name = "skyfmt_test",
+    srcs = ["run_test.go"],
+    embed = [":skyfmt"],
 )
