--- a/internal/cmd/skylint/BUILD.bazel
+++ b/internal/cmd/skylint/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "skylint",
@@ -10,4 +10,10 @@ go_library(
         "//internal/starlark/linter/buildtools",
         "//internal/version",
     ],
+)
+
+go_test(
+    name = "skylint_test",
+    srcs = ["run_test.go"],
+    embed = [":skylint"],
 )
