--- a/internal/cmd/skyquery/BUILD.bazel
+++ b/internal/cmd/skyquery/BUILD.bazel
@@ -1,4 +1,4 @@
-load("@rules_go//go:def.bzl", "go_library")
+load("@rules_go//go:def.bzl", "go_library", "go_test")
 
 go_library(
     name = "skyquery",
@@ -11,4 +11,10 @@ go_library(
         "//internal/starlark/query/output",
         "//internal/version",
     ],
+)
+
+go_test(
+    name = "skyquery_test",
+    srcs = ["run_test.go"],
+    embed = [":skyquery"],
 )
