--- a/internal/lsp/BUILD.bazel
+++ b/internal/lsp/BUILD.bazel
@@ -25,6 +25,7 @@ go_library(
 go_test(
     name = "lsp_test",
     srcs = [
+        "completion_test.go",
         "jsonrpc_test.go",
         "server_test.go",
     ],
