fix: resolve bazel build and astro MDX errors
- Fix testdata BUILD files: use package_name()/repository_name() functions
- Fix glob with allow_empty=True for missing *.cc files
- Escape <1% as &lt;1% in MDX to avoid JSX parsing
- Add .bazelignore to exclude testdata BUILD fixtures
- Add astro-build check to lefthook pre-push

--- a/internal/starlark/dialects/testdata/projects/multi-dialect/BUILD
+++ b/internal/starlark/dialects/testdata/projects/multi-dialect/BUILD
@@ -1,7 +1,10 @@
 # BUILD file in multi-dialect project
+# Note: This is a test fixture, not real build rules
+# Using allow_empty since no actual source files exist
+
 cc_library(
     name = "lib",
-    srcs = glob(include = ["*.cc"]),
+    srcs = glob(["*.cc"], allow_empty = True),
 )
 
 cc_binary(
