feat(lsp): wire builtins.Provider for completion and hover (TDD)
Add builtins.Provider integration to LSP server following TDD:

Tests (builtins_integration_test.go):
- TestServer_InitializeWithProvider
- TestCompletion_IncludesBuiltinFunctions/Types/Globals
- TestCompletion_BuiltinDocumentation
- TestHover_BuiltinFunction/Type/Global
- TestHover_FallbackToDocumentSymbols

Implementation (server.go):
- Add builtins field to Server struct
- Add NewServerWithProvider() constructor
- getProviderBuiltinCompletions() for function/type/global completions
- getBuiltinHover() for hover on builtins
- formatBuiltinFunctionHover/TypeHover/GlobalHover helpers

Backward compatible: NewServer() still works with hardcoded builtins.

--- a/internal/lsp/BUILD.bazel
+++ b/internal/lsp/BUILD.bazel
@@ -9,6 +9,7 @@ go_library(
     importpath = "github.com/albertocavalcante/sky/internal/lsp",
     visibility = ["//:__subpackages__"],
     deps = [
+        "//internal/starlark/builtins",
         "//internal/starlark/checker",
         "//internal/starlark/classifier",
         "//internal/starlark/docgen",
@@ -25,13 +26,16 @@ go_library(
 go_test(
     name = "lsp_test",
     srcs = [
+        "builtins_integration_test.go",
         "completion_test.go",
         "jsonrpc_test.go",
         "server_test.go",
     ],
     embed = [":lsp"],
     deps = [
+        "//internal/starlark/builtins",
         "//internal/starlark/checker",
+        "//internal/starlark/filekind",
         "//internal/starlark/linter",
         "@dev_lsp_go_protocol//:protocol",
         "@net_starlark_go//syntax",
