feat(lsp): add signature help, folding ranges, and document links
Implements three new LSP features following TDD:

- Signature Help: Shows parameter hints while typing function calls
  - Supports builtin functions (print, range, len, etc.)
  - Supports user-defined functions with docstrings
  - Tracks active parameter based on cursor position
  - Handles nested calls, multiline calls, and strings with commas

- Folding Ranges: Enables code folding in editors
  - Folds def statements, for loops, if statements
  - Folds call expressions, list literals, dict literals

- Document Links: Ctrl+click navigation for load() statements
  - Resolves workspace-relative paths (//pkg:file.bzl)
  - Resolves package-relative paths (:file.bzl)
  - Resolves bare filenames and relative paths

Also:
- Initializes default builtins provider from embedded JSON data
- Adds dialect/kind detection for URI-based builtin lookups
- Advertises all new capabilities in server initialization

--- a/internal/lsp/BUILD.bazel
+++ b/internal/lsp/BUILD.bazel
@@ -4,12 +4,14 @@ go_library(
     name = "lsp",
     srcs = [
         "jsonrpc.go",
+        "provider.go",
         "server.go",
     ],
     importpath = "github.com/albertocavalcante/sky/internal/lsp",
     visibility = ["//:__subpackages__"],
     deps = [
         "//internal/starlark/builtins",
+        "//internal/starlark/builtins/loader",
         "//internal/starlark/checker",
         "//internal/starlark/classifier",
         "//internal/starlark/docgen",
@@ -29,6 +31,7 @@ go_test(
         "builtins_integration_test.go",
         "completion_test.go",
         "jsonrpc_test.go",
+        "provider_test.go",
         "server_test.go",
     ],
     embed = [":lsp"],
