feat(skytest): add mocking fixture and fix snapshot issues (Phase 3.1)
This PR implements Phase 3.1 Mocking and addresses review comments from PR #38.

Mocking (Phase 3.1):
- Add `mock` fixture for test function injection
- `mock.wrap(fn)` - wraps callable to track calls
- `mock.when(fn).then_return(value)` - configure return values
- `mock.when(fn).called_with(args).then_return(value)` - arg-specific returns
- `mock.was_called(fn)`, `mock.call_count(fn)` - call verification
- `mock.calls(fn)` - get call history with args
- `mock.reset()` - clear all mock state
- Mock state automatically resets between tests for isolation

Snapshot fixes (PR #38 followup):
- Add Windows-invalid chars to filename sanitization (: * ? " < > |)
- Remove unused BaseDir field from SnapshotManager
- Improve sortStarlarkValues using starlark.Compare for stability
- Replace custom formatDiff with go-difflib for proper unified diffs

Tests:
- 9 unit tests for MockManager
- 6 integration tests for mock fixture usage

--- a/internal/starlark/tester/BUILD.bazel
+++ b/internal/starlark/tester/BUILD.bazel
@@ -6,13 +6,18 @@ go_library(
         "assertions.go",
         "coverage_hook.go",
         "discovery.go",
+        "fixtures.go",
+        "mock.go",
         "reporter.go",
+        "snapshot.go",
         "tester.go",
     ],
     importpath = "github.com/albertocavalcante/sky/internal/starlark/tester",
     visibility = ["//:__subpackages__"],
     deps = [
         "//internal/starlark/coverage",
+        "@com_github_pmezard_go_difflib//difflib",
+        "@net_starlark_go//lib/json",
         "@net_starlark_go//starlark",
         "@net_starlark_go//starlarkstruct",
         "@net_starlark_go//syntax",
@@ -21,6 +26,10 @@ go_library(
 
 go_test(
     name = "tester_test",
-    srcs = ["tester_test.go"],
+    srcs = [
+        "mock_test.go",
+        "tester_test.go",
+    ],
     embed = [":tester"],
+    deps = ["@net_starlark_go//starlark"],
 )
