feat(lsp): add code actions, references, rename, and workspace symbols
Implements four new LSP features following TDD:

- Code Actions: Quick fixes from skylint --fix
  - Converts linter findings with Replacement to CodeAction
  - Returns WorkspaceEdit with text edits for each fix

- Find References: Find all usages of a symbol
  - Walks AST to find all identifier occurrences
  - Supports functions, variables, and parameters
  - Respects IncludeDeclaration option

- Rename Symbol: Safe symbol renaming
  - Includes prepareRename for validation
  - Prevents renaming keywords and builtins
  - Returns WorkspaceEdit with all occurrences

- Workspace Symbols: Search symbols across workspace
  - Builds index on initialization
  - Case-insensitive partial matching
  - Enables cross-file go-to-definition via load() resolution

Also includes RFC for virtual modules (native, @bazel_tools, etc.)
to document future handling of special load targets.

--- a/internal/lsp/BUILD.bazel
+++ b/internal/lsp/BUILD.bazel
@@ -3,9 +3,16 @@ load("@rules_go//go:def.bzl", "go_library", "go_test")
 go_library(
     name = "lsp",
     srcs = [
+        "codeaction.go",
+        "folding.go",
         "jsonrpc.go",
+        "links.go",
         "provider.go",
+        "references.go",
+        "rename.go",
         "server.go",
+        "signature.go",
+        "workspace.go",
     ],
     importpath = "github.com/albertocavalcante/sky/internal/lsp",
     visibility = ["//:__subpackages__"],
@@ -29,10 +36,15 @@ go_test(
     name = "lsp_test",
     srcs = [
         "builtins_integration_test.go",
+        "codeaction_test.go",
         "completion_test.go",
         "jsonrpc_test.go",
         "provider_test.go",
+        "references_test.go",
+        "rename_test.go",
         "server_test.go",
+        "signature_test.go",
+        "workspace_test.go",
     ],
     embed = [":lsp"],
     deps = [
