feat(skytest): add watch mode for continuous testing (Phase 3.4)
This PR implements Phase 3.4 Watch Mode from RFC-001.

Features:
- `--watch` / `-w` flag enables continuous testing
- `--affected-only` flag to only run tests affected by changes
- File watcher with dependency tracking via load() statements
- Transitive dependency resolution (if A loads B loads C, changing C affects A)
- Clear screen and re-run on file changes
- Graceful shutdown with Ctrl+C

Implementation:
- New Watcher type tracks test files and their dependencies
- Extracts load() statements from Starlark files
- Builds reverse dependency graph for affected-only mode
- Uses fsnotify for cross-platform file watching
- Ignores Bazel-style labels (//pkg:file, @repo//pkg:file)

Usage:
```bash
skytest --watch tests/          # Watch and re-run all tests
skytest -w --affected-only .    # Watch, only run affected tests
```

Tests:
- 7 unit tests for Watcher functionality
- All existing tests pass

--- a/internal/starlark/tester/BUILD.bazel
+++ b/internal/starlark/tester/BUILD.bazel
@@ -11,11 +11,13 @@ go_library(
         "reporter.go",
         "snapshot.go",
         "tester.go",
+        "watcher.go",
     ],
     importpath = "github.com/albertocavalcante/sky/internal/starlark/tester",
     visibility = ["//:__subpackages__"],
     deps = [
         "//internal/starlark/coverage",
+        "@com_github_fsnotify_fsnotify//:fsnotify",
         "@com_github_pmezard_go_difflib//difflib",
         "@net_starlark_go//lib/json",
         "@net_starlark_go//starlark",
@@ -29,6 +31,7 @@ go_test(
     srcs = [
         "mock_test.go",
         "tester_test.go",
+        "watcher_test.go",
     ],
     embed = [":tester"],
     deps = ["@net_starlark_go//starlark"],
