--- a/internal/cmd/skytest/BUILD.bazel
+++ b/internal/cmd/skytest/BUILD.bazel
@@ -14,6 +14,9 @@ go_library(
 
 go_test(
     name = "skytest_test",
-    srcs = ["run_test.go"],
+    srcs = [
+        "parallel_test.go",
+        "run_test.go",
+    ],
     embed = [":skytest"],
 )
