--- a/MODULE.bazel
+++ b/MODULE.bazel
@@ -28,6 +28,7 @@ go_deps.from_file(go_mod = "//:go.mod")
 use_repo(
     go_deps,
     "com_github_bazelbuild_buildtools",
+    "com_github_fsnotify_fsnotify",
     "com_github_gofrs_flock",
     "com_github_google_go_cmp",
     "com_github_kisielk_errcheck",
