feat(lsp): add semantic tokens support
Implement LSP semantic tokens for Starlark/Bazel files:
- Token types: namespace, function, variable, parameter, keyword,
  string, number, operator, comment, method, property, label
- Token modifiers: declaration, definition, readonly, defaultLibrary
- Support for textDocument/semanticTokens/full and /range
- Proper scope tracking for variable classification
- Bazel-specific: label detection, native module highlighting
- Delta encoding per LSP spec

Includes comprehensive test coverage for all token types and LSP
integration tests.

--- a/internal/lsp/BUILD.bazel
+++ b/internal/lsp/BUILD.bazel
@@ -10,6 +10,8 @@ go_library(
         "provider.go",
         "references.go",
         "rename.go",
+        "semantic.go",
+        "semantic_types.go",
         "server.go",
         "signature.go",
         "workspace.go",
@@ -42,6 +44,7 @@ go_test(
         "provider_test.go",
         "references_test.go",
         "rename_test.go",
+        "semantic_test.go",
         "server_test.go",
         "signature_test.go",
         "workspace_test.go",
