feat(skyconfig): add unified configuration support (Phase 4.1)
Add unified configuration for sky tools supporting two formats:
- config.sky / sky.star: Dynamic Starlark configuration (dogfooding)
- sky.toml: Simple, declarative TOML configuration

Key features:
- Config discovery walks up directories to find config files
- SKY_CONFIG environment variable for global override
- --config flag on tools for explicit path
- Conflict detection when multiple configs exist in same directory
- Sandboxed Starlark execution with timeout (5s default)
- Starlark builtins: getenv(), host_os, host_arch, duration()

Config resolution order:
1. --config flag (if specified)
2. SKY_CONFIG env var (if set)
3. Walk up directories: config.sky > sky.star > sky.toml

Integrated with skytest; CLI flags override config values.

--- a/internal/cmd/skytest/BUILD.bazel
+++ b/internal/cmd/skytest/BUILD.bazel
@@ -6,6 +6,7 @@ go_library(
     importpath = "github.com/albertocavalcante/sky/internal/cmd/skytest",
     visibility = ["//:__subpackages__"],
     deps = [
+        "//internal/skyconfig",
         "//internal/starlark/coverage",
         "//internal/starlark/tester",
         "//internal/version",
